# jinja2_pyfilesystem_loader

./: .gitignore  README.md  pyproject.toml
pyfs_loader/: __init__.py  pyfs_loader.py
