[tool.poetry]
name = "pyfs_loader"
version = "0.1.0"
description = ""
authors = ["rongfengliang <1141591465@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fs = "^2.4.16"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
